--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome #{name} to #{title}. I am in #{place1}
+  p Fetching data from database ::: #{fromDb}
