Basic Angular implementation done.Writing API/Services to interact with node is remaining. Issue 1 is fixed as well.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,11 +1,12 @@
-<html>
+<html ng-app="angapp">
 <title>NodeWithAngular</title>
 <head>
     <title>Integrating AngularJS with NodeJS</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script>
-    <script src="script/angapp.js" type="text/javascript"></script> <!-- not created yet -->
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script> -->
+    <script src="scripts/angular.js" type="text/javascript"></script> <!-- not created yet -->
+    <script src="scripts/angapp.js" type="text/javascript"></script> <!-- not created yet -->
 </head>
-<body ng-app="angapp">
+<body >
   <center><h1>Node with Angular Js integration</h1></center>
   <p>
     Html file with angular implementation!
