fixed the issue1

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,6 +6,7 @@
     <script src="scripts/angular.js" type="text/javascript"></script> <!-- not created yet -->
     <script src="scripts/angapp.js" type="text/javascript"></script> <!-- not created yet -->
 </head>
+<!-----commemnt---->
 <body >
   <center><h1>Node with Angular Js integration</h1></center>
   <p>
