--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,19 +3,22 @@
 <head>
     <title>Integrating AngularJS with NodeJS</title>
     <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script> -->
-    <script src="scripts/angular.js" type="text/javascript"></script> <!-- not created yet -->
-    <script src="scripts/angapp.js" type="text/javascript"></script> <!-- not created yet -->
+    <!--angular library -->
+    <script src="angular/lib/angular.js" type="text/javascript"></script>
+    <!--angular services -->
+    <script src="angular/services/FetchDataFromDBService.js" type="text/javascript"></script>
+    <!--angular controllers -->
+    <script src="angular/controller/mainCtrl.js" type="text/javascript"></script>
+
 </head>
 <body >
   <center><h1>Node with Angular Js integration</h1></center>
   <p>
     Html file with angular implementation!
   </p>
-  <div ng-controller="mainCtrl as mctrl">
-    <!-- <ul ng-repeat="item in data">
-       <li>Name: {{item.name}}, City: {{item.city}}</li>
-    </ul> -->
-    <p>{{mctrl.someMessage}}</p>
+  <div ng-controller="mainCtrl as mainCtrl">
+    <button ng-click="mainCtrl.myFunc();">Load Data</button>
+    <p>{{mainCtrl.someMessage}}</p>
   </div>
 </body>
 </html>
