--- a/public/app/views/cert-list.html
+++ b/public/app/views/cert-list.html
@@ -2,7 +2,7 @@
     <!-- TODO: Replace table to table component when https://github.com/angular/material/issues/796 will closed -->
     <md-toolbar class="md-table-toolbar md-default">
     <div class="md-toolbar-tools">
-        <span>Nutrition</span>
+        <span>Certificate List</span>
     </div>
     </md-toolbar>
 
@@ -11,29 +11,30 @@
     <table md-table md-row-select multiple ng-model="selected" class="table table-hover table-bordered" >
         <thead md-head md-order="query.order" md-on-reorder="vm.getItems()">
         <tr md-row>
-            <th md-column md-numeric>ID</th>
-            <th md-column md-order-by="nameToLower"><span>Dessert (100g serving)</span></th>
-            <th md-column md-numeric md-order-by="calories.value"><span>Calories</span></th>
-            <th md-column md-numeric>Fat (g)</th>
-            <th md-column md-numeric>Carbs (g)</th>
-        
+            <th md-column md-numeric></th>
+            <th md-column md-numeric>CryptoObject </th>
+            <th md-column md-numeric>NotBefore</th>
+            <th md-column md-numeric>NotAfter</th>
+            <th md-column md-numeric>ExpiresInDays </th>
+            <th md-column md-numeric>Subject</th>
+            <th md-column md-numeric>Issuer </th>
         </tr>
         </thead>
         <tbody md-body>
         <tr md-row md-select="item" md-select-id="name" md-auto-select ng-repeat="item in vm.tableData">
-            <td md-cell>{{item.id}}</td>
-            <td md-cell>{{item.issue}}</td>
-            <td md-cell>{{item.progress}}</td>
-            <td md-cell>{{item.status}}</td>
-            <td md-cell>
+            <td md-cell><span class="glyphicon glyphicon-edit"></span></td>
+            <td md-cell>{{item.CryptoObject}}</td>
+            <td md-cell>{{item.NotBefore}}</td>
+            <td md-cell>{{item.NotAfter}}</td>
+            <td md-cell>{{item.ExpiresInDays}}</td>
+            <td md-cell>{{item.Subject}}</td>
+            <td md-cell>{{item.Issuer}}</td>
+            <!-- <td md-cell>
                 <md-progress-linear class="table-progress {{item.class}}"
                     md-mode="determinate"
                     value={{item.progress}}>
                 </md-progress-linear>
-            </td>
-
-            
-            
+            </td> -->
         </tr>
         </tbody>
     </table>
