Angular ui-grid implementation

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,8 +55,10 @@
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
+    <script src="http://ui-grid.info/release/ui-grid.js"></script>
+    <link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
 
-  <script src="http://underscorejs.org/underscore.js"></script>
+    <script src="http://underscorejs.org/underscore.js"></script>
     <script src="app/app.js"></script>
     <script src="app/components/services/TodoListService.js"></script>
     <script src="app/components/services/TableService.js"></script>
