Edit certificate popup immplementation.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="app/index.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+
     <!-- endinject -->
     <!-- endbuild -->
   </head>
@@ -46,10 +47,15 @@
     <script src="bower_components/nvd3/build/nv.d3.js"></script>
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
+    <!-- <script src="bower_components/angular-messages/angular-messages.js"></script> -->  
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-messages.min.js'></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+
+
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -81,6 +87,8 @@
     <script src="app/controllers/MainController.js"></script>
     <script src="app/controllers/CertListController.js"></script>
     <script src="app/controllers/ControlPanelController.js"></script>
+
+    <script src="app/controllers/editCertPopupController.js"></script>
     <script src="app/index.js"></script>
     <!-- endinject -->
 
