--- a/public/app/views/cert-list.html
+++ b/public/app/views/cert-list.html
@@ -1,1 +1,1 @@
-<p><h3>Certificate List </h3></p><style type="text/css">.myGrid {width: auto;height: auto;}</style><div ui-grid="gridOptions" ui-grid-pagination class="myGrid"></div>
+<p><h3>Certificate List </h3></p><style type="text/css">.myGrid {width: auto;height: auto;}</style><div ui-grid="gridOptions" ui-grid-pagination ui-grid-selection class="myGrid"></div>
