--- a/public/app/views/partials/editCertificate.html
+++ b/public/app/views/partials/editCertificate.html
@@ -1,7 +1,7 @@
 <div ng-controller="editCertPopupController" style="padding: 5px;">
   <div><center><h3>Update Certificate </h3></center><hr></div>
   <div>
-    <form name="editCertForm" novalidate  ng-submit="editCertForm.$valid && updateCertificate()">
+    <form name="editCertForm" novalidate  ng-submit="editCertForm.$valid && updateCertificate()" class="">
         <!-- CryptoObject field -->
         <div class="form-group">
           <div class="col-sm-12">
@@ -55,17 +55,22 @@
         </div>
         <!-- Subject field -->
         <div class="form-group">
+          <div class="col-sm-12">
+             <label>Subject</label>
+             <textarea type="text" name="Subject" class="form-control" ng-model="Subject" rows="4" required></textarea>
+             <!-- ngMessages goes here -->
+             <div class="help-block" ng-messages="editCertForm.Subject.$error" ng-if="editCertForm.Subject.$dirty">
+                <p ng-message="required">Subject is required.</p>
+             </div>
 
-           <label>Subject</label>
-           <textarea type="text" name="Subject" class="form-control" ng-model="Subject" rows="4" required></textarea>
-           <!-- ngMessages goes here -->
-           <div class="help-block" ng-messages="editCertForm.Subject.$error" ng-if="editCertForm.Subject.$dirty">
-              <p ng-message="required">Subject is required.</p>
-           </div>
-           <input type="submit">
-
-
+          </div>
        </div>
+      <div class="form-group row">
+        <div class="offset-sm-2 col-sm-10">
+          <input type="submit" class="btn btn-primary" />
+          <!-- <button type="submit" class="btn btn-primary">Sign in</button> -->
+        </div>
+      </div>
         <!-- <div class="col-sm-12"><input type="submit" text = "Update"></div> -->
 
     </form>
