DB Schema change. View and Edit form implemented.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,7 +47,7 @@
     <script src="bower_components/nvd3/build/nv.d3.js"></script>
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <!-- <script src="bower_components/angular-messages/angular-messages.js"></script> -->  
+    <!-- <script src="bower_components/angular-messages/angular-messages.js"></script> -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-messages.min.js'></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
@@ -87,7 +87,7 @@
     <script src="app/controllers/MainController.js"></script>
     <script src="app/controllers/CertListController.js"></script>
     <script src="app/controllers/ControlPanelController.js"></script>
-
+    <script src="app/controllers/viewCertPopupController.js"></script>
     <script src="app/controllers/editCertPopupController.js"></script>
     <script src="app/index.js"></script>
     <!-- endinject -->
